2013-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c, device-src/null-device.c,
	  device-src/rait-device.c, device-src/s3-device.c,
	  device-src/tape-device.c, device-src/vfs-device.c
	  (*device__finish_file): Set in_file even when already on error.
	* device-src/xfer-dest-taper-directtcp.c: Always call
	  device_finish_file().

2013-06-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm (make_new_tape_label): Return a not_fatal bit
	  for some error.
	* perl/Amanda/ScanInventory.pm: Continue the scan on not_fatal
	  make_new_tape_label error.

2013-06-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Use the itapelist pool to find the storage
	  if the storage is not in the tapelist.

2013-06-05  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Taper_Scan_lexical.pl,
	  installcheck/Amanda_Taper_Scan_oldest.pl,
	  installcheck/Amanda_Taper_Scan_traditional.pl: Quit the storage.
	* perl/Amanda/Report/human.pm: Fix perl warning.
	* perl/Amanda/Storage.pm: Do not create the storage on failure.
	* perl/Amanda/Taper/Controller.pm: Keep the storage, quit the storage.
	* perl/Amanda/Taper/Worker.pm: Use controller's storage.
	* server-src/amcheck-device.pl, server-src/amidxtaped.pl,
	  server-src/amlabel.pl, server-src/amrmtape.pl,
	  server-src/amtape.pl, server-src/amvault.pl: Quit the Storage.

2013-06-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add ERASE_ON_FAILURE storage setting.
	* common-src/conffile.h: Add STORAGE_ERASE_ON_FAILURE.
	* man/xml-source/amanda.conf.5.xml: add erase-on-failure.
	* perl/Amanda/Config.swg: Add STORAGE_ERASE_ON_FAILURE.
	* perl/Amanda/Report.pm: Parse new taper line, add storage in %part.
	* perl/Amanda/Report/human.pm: Take care of storage.
	* perl/Amanda/Storage.pm: Set erase_on_failure.
	* perl/Amanda/Taper/Scribe.pm: Erase a volume if nothing good written
	  to it.