@@ -148,6 +148,7 @@ startup_tape_process(
 	taper->max_dle_by_volume = storage_get_max_dle_by_volume(storage);
 	taper->tapeq.head = NULL;
 	taper->tapeq.tail = NULL;
+	taper->degraded_mode = no_taper;
 
 	taper->wtapetable = g_new0(wtaper_t, tapetable[nb_taper].nb_worker + 1);
 	if (!taper->wtapetable) {
